[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/anima/visual-editor/shared/AnimaButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/anima/visual-editor/editor/AnimaTimeline.gd" type="Script" id=2]
[ext_resource path="res://addons/anima/visual-editor/icons/ZoomLess.svg" type="Texture" id=3]
[ext_resource path="res://addons/anima/visual-editor/icons/ZoomMore.svg" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[node name="AnimaTimeline" type="ScrollContainer"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="Wrapper" type="HBoxContainer" parent="."]
margin_right = 600.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Wrapper"]
visible = false
margin_right = 48.0
margin_bottom = 48.0

[node name="ZoomIn" parent="Wrapper/VBoxContainer" instance=ExtResource( 1 )]
rect_pivot_offset = Vector2( 24, 12 )
icon = ExtResource( 4 )
icon_align = 1
expand_icon = true
__meta__ = {
"__initial_AnimaNode__anima_1089089038415726807__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1089089038415726807_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1109358829504410889__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1109358829504410889_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1109358829504410889_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_1184046554139278564__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1184046554139278564_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1199797368124862305__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1199797368124862305_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1199797368124862305_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_1340607361553487793__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1340607361553487793_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1441945957727123779__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1441945957727123779_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1441945957727123779_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_164700612275147168__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_164700612275147168_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1658482992875293945__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1658482992875293945_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1663072209510023438__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1663072209510023438_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_215925900549246643__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_215925900549246643_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_244386363034037598__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_244386363034037598_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_359789769654524719__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_359789769654524719_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_447088250819550293__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_447088250819550293_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_447088250819550293_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_454360864891194458__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_454360864891194458_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_454360864891194458_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_503159164245518066__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_503159164245518066_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_503159164245518066_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_541279795408501465__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_541279795408501465_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_611141024203869141__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_611141024203869141_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_611141024203869141_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_625146128990218994__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_625146128990218994_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_647142782613271851__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_647142782613271851_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_698052055760981323__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_698052055760981323_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_774037851557249634__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_774037851557249634_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_774037851557249634_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_807775977158753784__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_807775977158753784_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_8113687285780011__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_8113687285780011_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_838497898335865356__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_838497898335865356_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_838497898335865356_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_840572761080846802__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_840572761080846802_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_840572761080846802_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_871971128971702881__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_871971128971702881_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_871971128971702881_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_944680552210345459__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_944680552210345459_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_944680552210345459_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_Button__button_bg": Color( 0.0196078, 0.266667, 0.368627, 1 ),
"__initial_ZoomIn__button_bg": Color( 0.215686, 0.254902, 0.25098, 1 ),
"__visibility_strategy": 0,
"_visibility_strategy_reverted": true
}
style = 3
transparent = true

[node name="ZoomOut" parent="Wrapper/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 26.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 24, 12 )
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true
__meta__ = {
"__initial_AnimaNode__anima_1089089038415726807__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1089089038415726807_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1109358829504410889__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1109358829504410889_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1109358829504410889_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_1184046554139278564__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1184046554139278564_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1199797368124862305__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1199797368124862305_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1199797368124862305_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_1340607361553487793__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1340607361553487793_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1441945957727123779__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1441945957727123779_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1441945957727123779_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_164700612275147168__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_164700612275147168_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1658482992875293945__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1658482992875293945_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1663072209510023438__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1663072209510023438_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_215925900549246643__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_215925900549246643_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_244386363034037598__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_244386363034037598_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_359789769654524719__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_359789769654524719_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_447088250819550293__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_447088250819550293_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_447088250819550293_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_454360864891194458__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_454360864891194458_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_454360864891194458_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_503159164245518066__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_503159164245518066_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_503159164245518066_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_541279795408501465__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_541279795408501465_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_611141024203869141__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_611141024203869141_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_611141024203869141_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_625146128990218994__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_625146128990218994_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_647142782613271851__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_647142782613271851_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_698052055760981323__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_698052055760981323_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_774037851557249634__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_774037851557249634_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_774037851557249634_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_807775977158753784__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_807775977158753784_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_8113687285780011__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_8113687285780011_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_838497898335865356__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_838497898335865356_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_838497898335865356_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_840572761080846802__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_840572761080846802_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_840572761080846802_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_871971128971702881__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_871971128971702881_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_871971128971702881_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_944680552210345459__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_944680552210345459_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_944680552210345459_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_Button__button_bg": Color( 0.0196078, 0.266667, 0.368627, 1 ),
"__initial_ZoomOut__button_bg": Color( 0.0196078, 0.266667, 0.368627, 1 ),
"__visibility_strategy": 0,
"_visibility_strategy_reverted": true
}
style = 3
transparent = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Wrapper"]
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
rect_pivot_offset = Vector2( -235, -146 )
custom_constants/separation = 0

[node name="TimeLineContainer" type="HBoxContainer" parent="Wrapper/VBoxContainer2"]
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3

[node name="LineWrapper" type="Control" parent="Wrapper/VBoxContainer2"]
margin_top = 24.0
margin_bottom = 24.0

[node name="Panel" type="Panel" parent="Wrapper/VBoxContainer2/LineWrapper"]
margin_right = 2.0
margin_bottom = 20.0
rect_min_size = Vector2( 2, 20 )
custom_styles/panel = SubResource( 1 )

[node name="LabelsContainer" type="Control" parent="Wrapper/VBoxContainer2"]
margin_top = 24.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="Wrapper/VBoxContainer/ZoomIn" to="." method="_on_ZoomIn_pressed"]
[connection signal="pressed" from="Wrapper/VBoxContainer/ZoomOut" to="." method="_on_ZoomOut_pressed"]
